# DeepLerningProjectTekup

./: .gitattributes  .gitignore  .pre-commit-config.yaml  DOCUMENTATION_TECHNIQUE.md  MLOPS_GUIDE.md  README.md  demo_mlops.py  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  drift-detection.yml  model-training.yml
ab_experiments/: experiments.json
docker/: Dockerfile.api  Dockerfile.streamlit  docker-compose.yml
feature_store/metadata/: store_metadata.json
mlruns/0/: meta.yaml
mlruns/299671054688664149/: meta.yaml
mlruns/299671054688664149/62720b42fc2543289a8465d93dcd06a3/: meta.yaml
mlruns/299671054688664149/62720b42fc2543289a8465d93dcd06a3/artifacts/: best_model.pth
mlruns/299671054688664149/62720b42fc2543289a8465d93dcd06a3/metrics/: best_epoch  best_val_acc  learning_rate  train_acc  train_loss  val_acc  val_loss
mlruns/299671054688664149/62720b42fc2543289a8465d93dcd06a3/tags/: mlflow.runName  mlflow.runStartTime  mlflow.source.git.commit
mlruns/299671054688664149/7f1035f4102746c6a69a73eb1277e03d/: meta.yaml
mlruns/299671054688664149/7f1035f4102746c6a69a73eb1277e03d/metrics/: best_val_acc  train_acc  train_loss  val_acc  val_loss
mlruns/299671054688664149/7f1035f4102746c6a69a73eb1277e03d/tags/: mlflow.runName  mlflow.runStartTime
mlruns/299671054688664149/8a8c44f3780e4b36a92da59ddd82e60d/: meta.yaml
mlruns/299671054688664149/8a8c44f3780e4b36a92da59ddd82e60d/metrics/: best_val_acc  train_acc  train_loss  val_acc  val_loss
mlruns/299671054688664149/8a8c44f3780e4b36a92da59ddd82e60d/tags/: mlflow.runName  mlflow.runStartTime
mlruns/299671054688664149/9b425272067148d4adcc08f6f962c189/: meta.yaml
mlruns/299671054688664149/9b425272067148d4adcc08f6f962c189/metrics/: best_val_acc  train_acc  train_loss  val_acc  val_loss
mlruns/299671054688664149/9b425272067148d4adcc08f6f962c189/params/: augmentation
mlruns/299671054688664149/9b425272067148d4adcc08f6f962c189/tags/: mlflow.runName  mlflow.runStartTime
mlruns/299671054688664149/a0b711caed3c479f8b8bbe5f32745dbb/: meta.yaml
mlruns/299671054688664149/a0b711caed3c479f8b8bbe5f32745dbb/metrics/: best_val_acc  train_acc  train_loss  val_acc  val_loss
mlruns/299671054688664149/a0b711caed3c479f8b8bbe5f32745dbb/params/: augmentation
mlruns/299671054688664149/a0b711caed3c479f8b8bbe5f32745dbb/tags/: mlflow.runName  mlflow.runStartTime
mlruns/299671054688664149/b512e7b5225b4d0ca3b41476322eb077/: meta.yaml
mlruns/299671054688664149/b512e7b5225b4d0ca3b41476322eb077/metrics/: best_val_acc  train_acc  train_loss  val_acc  val_loss
mlruns/299671054688664149/b512e7b5225b4d0ca3b41476322eb077/tags/: mlflow.runName  mlflow.runStartTime  mlflow.source.name
mlruns/299671054688664149/b870cdbd013c4d11a2d126c142515364/: meta.yaml
mlruns/299671054688664149/b870cdbd013c4d11a2d126c142515364/metrics/: best_val_acc  train_acc  train_loss  val_acc  val_loss
mlruns/299671054688664149/b870cdbd013c4d11a2d126c142515364/params/: augmentation
mlruns/299671054688664149/b870cdbd013c4d11a2d126c142515364/tags/: mlflow.runName  mlflow.runStartTime
mlruns/661033794925298707/: meta.yaml
mlruns/661033794925298707/29fcb2886d96493ba19a92e83f81b1ca/: meta.yaml
mlruns/661033794925298707/29fcb2886d96493ba19a92e83f81b1ca/metrics/: phase1_train_acc  phase1_train_loss  phase1_val_acc  phase1_val_loss
mlruns/661033794925298707/29fcb2886d96493ba19a92e83f81b1ca/tags/: mlflow.source.git.commit  mlflow.source.name
mlruns/661033794925298707/5b696527bd4c41088a17cd8e6577f147/: meta.yaml
mlruns/661033794925298707/5b696527bd4c41088a17cd8e6577f147/artifacts/: best_model_transfer_learning.pth
mlruns/661033794925298707/5b696527bd4c41088a17cd8e6577f147/metrics/: best_val_accuracy  phase1_train_acc  phase1_train_loss  phase1_val_acc  phase1_val_loss  phase2_train_acc  phase2_train_loss  phase2_val_acc  phase2_val_loss  test_accuracy  test_loss  total_training_time_seconds
mlruns/661033794925298707/f19a4ee4fc1c459c97018f4c321fc6b7/: meta.yaml
mlruns/661033794925298707/f19a4ee4fc1c459c97018f4c321fc6b7/artifacts/: best_model_transfer_learning.pth
mlruns/661033794925298707/f19a4ee4fc1c459c97018f4c321fc6b7/metrics/: best_val_accuracy  phase1_train_acc  phase1_train_loss  phase1_val_acc  phase1_val_loss  phase2_train_acc  phase2_train_loss  phase2_val_acc  phase2_val_loss  test_accuracy  test_loss  total_training_time_seconds
mlruns/661033794925298707/f19a4ee4fc1c459c97018f4c321fc6b7/tags/: mlflow.runName
mlruns/661033794925298707/models/m-111d7d025cb94b85abdbe6d7b37e40a6/: meta.yaml
model_registry/: registry.json
notebooks/: 01_exploration_donnees.ipynb  02_entrainement_modele.ipynb  03_evaluation.ipynb
src/api/: endpoints.py  main.py
src/data/: dataset.py  preprocessing.py
src/mlops/: __init__.py  ab_testing.py  data_validation.py  drift_detection.py  feature_store.py  model_optimization.py  model_registry.py  monitoring.py  retraining.py
src/models/: architecture.py  training.py  transfer_learning.py
src/utils/: config.py  metrics.py
streamlit_app/: app.py
tests/: test_api.py  test_data.py  test_mlops.py  test_models.py
(+29 files in other folders)
